# OpenSunstar

./: .bytro  .gitignore  AGENTS.md  AI资产跨工具跨设备同步与资产管理-深度调研报告.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_DE.md  README_JA.md  README_ZH.md  SECURITY.md  SUPPORT.md  deplink.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: FUNDING.yml
AIControls-open-source/AIControls-open-source/src-tauri/: Cargo.toml  tauri.conf.json
AIControls-open-source/AIControls-open-source/src-tauri/capabilities/: default.json
AIControls-open-source/AIControls-open-source/src-tauri/icons/: icon.icns
AIControls-open-source/AIControls-open-source/src-tauri/src/: code_metrics.rs  deepseek.rs  gitee.rs  github_import.rs  lib.rs  main.rs  my_skills_library.rs  prompt_library.rs  resource_library.rs  scan.rs  skill_copy.rs  storage.rs
docs/: VERSIONING.md  cli-distribution-p1.md  kanban.md
flatpak/: README.md  com.OpenSunstar.desktop.desktop  com.OpenSunstar.desktop.metainfo.xml  com.OpenSunstar.desktop.yml
modelscope-api-skill/: README.md  SKILL.md  _meta.json  clawhub.json  skill-card.md
scripts/: dev-doctor.mjs  extract-icons.js  i18n-check.mjs  prepare-release-build.mjs  purge-internal-docs.sh  release-bump.mjs  release-tag.ps1  release-tag.sh  sync-brand-assets.py  sync-os-cli-version.mjs  sync-website-pages.sh  test-token.mjs  update-os-cli-checksums.mjs  verify-os-cli-package.mjs  website-publish.mjs
src/: App.tsx  index.css  index.html  main.tsx  (+1 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.windows.conf.json
(+851 files in other folders)
