[package]
name = "aicontrols"
version = "0.1.0"
description = "AIControls — UI shell"
edition = "2021"

build = "build.rs"

[lib]
name = "aicontrols"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "aicontrols"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
base64 = "0.22.1"
urlencoding = "2.1.3"
uuid = { version = "1.23.1", features = ["v4"] }
open = "5.3.4"
sha2 = "0.11.0"
tokei = "14"
toml = "1.1.2"
